--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
@@ -87,6 +87,9 @@
 		<Unit filename="..\..\..\..\headers\QTransformationMatrix3x3.h" />
 		<Unit filename="..\..\..\..\headers\QTranslationMatrix.h" />
 		<Unit filename="..\..\..\..\headers\QTriangle.h" />
+		<Unit filename="..\..\..\..\headers\QTriangle2D.h">
+			<Option compile="1" />
+		</Unit>
 		<Unit filename="..\..\..\..\headers\QVF32.h" />
 		<Unit filename="..\..\..\..\headers\QVector2.h" />
 		<Unit filename="..\..\..\..\headers\QVector3.h" />
