--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
@@ -91,6 +91,7 @@
 		<Unit filename="..\..\..\..\headers\QTranslationMatrix.h" />
 		<Unit filename="..\..\..\..\headers\QTriangle.h" />
 		<Unit filename="..\..\..\..\headers\QTriangle2D.h" />
+		<Unit filename="..\..\..\..\headers\QTriangle3D.h" />
 		<Unit filename="..\..\..\..\headers\QVF32.h" />
 		<Unit filename="..\..\..\..\headers\QVector2.h" />
 		<Unit filename="..\..\..\..\headers\QVector3.h" />
