183 - Llamadas a operator= incorrecta
-Sustituído el código de operator= por aquel que llama al operator= de la clase "raíz" en los siguientes archivos .h:

QDualQuaternion
QLineSegment
QLineSegment2D
QLineSegment3D
QMatrix2x2
QMatrix3x3
QMatrix3x4
QMatrix4x3
QMatrix4x4
QOrb
QPlane
QQuadrilateral
QQuaternion
QRotationMatrix3x3
QScaleMatrix3x3
QSpaceConversionMatrix
QTransformationMatrix
QTransformationMatrix3x3
QTranslationMatrix
QTriangle
QTriangle2D
QTriangle3D
QVector2
QVector3
QVector4

-Incluídoo el archivo QQuadrilateral.h al proyecto de Visual Studio (estaba sólo en el de CodeBlocks)

--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="..\..\..\..\headers\QFloat.h" />
     <ClInclude Include="..\..\..\..\headers\QOrb.h" />
     <ClInclude Include="..\..\..\..\headers\QPlane.h" />
+    <ClInclude Include="..\..\..\..\headers\QQuadrilateral.h" />
     <ClInclude Include="..\..\..\..\headers\QQuaternion.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseVector4.h" />
     <ClInclude Include="..\..\..\..\headers\QRay.h" />
