--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
@@ -67,6 +67,7 @@
 		<Unit filename="..\..\..\..\headers\QBaseVector3.h" />
 		<Unit filename="..\..\..\..\headers\QBaseVector4.h" />
 		<Unit filename="..\..\..\..\headers\QBoolean.h" />
+		<Unit filename="..\..\..\..\headers\QCircle.h" />
 		<Unit filename="..\..\..\..\headers\QDualQuaternion.h" />
 		<Unit filename="..\..\..\..\headers\QFloat.h" />
 		<Unit filename="..\..\..\..\headers\QHexahedron.h" />
@@ -103,6 +104,7 @@
 		<Unit filename="..\..\..\..\source\EQSpaceRelation.cpp" />
 		<Unit filename="..\..\..\..\source\QAngle.cpp" />
 		<Unit filename="..\..\..\..\source\QBoolean.cpp" />
+		<Unit filename="..\..\..\..\source\QCircle.cpp" />
 		<Unit filename="..\..\..\..\source\QDualQuaternion.cpp" />
 		<Unit filename="..\..\..\..\source\QFloat.cpp" />
 		<Unit filename="..\..\..\..\source\QLineSegment2D.cpp" />
