138 - QRay3D Implements the functionality of a ray in 3D space. Adds Intersection and IntersectionPoint methods which accepts a QBaseOrb to QRay.h

--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="..\..\..\..\headers\QBaseVector4.h" />
     <ClInclude Include="..\..\..\..\headers\QRay.h" />
     <ClInclude Include="..\..\..\..\headers\QRay2D.h" />
+    <ClInclude Include="..\..\..\..\headers\QRay3D.h" />
     <ClInclude Include="..\..\..\..\headers\QRotationMatrix3x3.h" />
     <ClInclude Include="..\..\..\..\headers\QScaleMatrix3x3.h" />
     <ClInclude Include="..\..\..\..\headers\QSpaceConversionMatrix.h" />
