--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
@@ -87,6 +87,7 @@
 		<Unit filename="..\..\..\..\headers\QQuaternion.h" />
 		<Unit filename="..\..\..\..\headers\QRay.h" />
 		<Unit filename="..\..\..\..\headers\QRay2D.h" />
+		<Unit filename="..\..\..\..\headers\QRay3D.h" />
 		<Unit filename="..\..\..\..\headers\QRotationMatrix3x3.h" />
 		<Unit filename="..\..\..\..\headers\QScaleMatrix3x3.h" />
 		<Unit filename="..\..\..\..\headers\QSpaceConversionMatrix.h" />
