143 - Crear macros para abreviar nombres de tests
Agregadas nuevas macros para encapsular las de Boost.
Renombrado commons por testsystem.

--- a/trunk/tests/projects/VS2010/QEUnitTests/Tools/Tools.vcxproj
+++ b/trunk/tests/projects/VS2010/QEUnitTests/Tools/Tools.vcxproj
@@ -21,6 +21,7 @@
     <ClInclude Include="..\..\..\..\common\QSimpleConfigLoader.h" />
     <ClInclude Include="..\..\..\..\common\QuimeraEngineFixtures.h" />
     <ClInclude Include="..\..\..\..\common\QUnitTestModuleBase.h" />
+    <ClInclude Include="..\..\..\..\common\TestingExternalDefinitions.h" />
     <ClInclude Include="..\..\..\..\common\TestingHelperDefinitions.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
